# PythonCalculator

./: setup.cfg
pythoncalculator/: __init__.py
